[tool.poetry]
name = "02456-painn-project"
version = "0.1.0"
description = ""
authors = ["Jakob Cetti Hansen <jkbch@coga.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = { version = "^2.5.1+cpu", source = "pytorch" }
torch-geometric = "^2.6.1"
lightning = "^2.4.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
